add: -补全剩余模块文件上传和语音聊天